fixed TIL_OOP finall

--- a/_posts/2021-01-14-TIL-OOP.md
+++ b/_posts/2021-01-14-TIL-OOP.md
@@ -6,23 +6,23 @@ categories: JavaScript codestates Github
 
 ![OOP_image](https://user-images.githubusercontent.com/70124288/104579710-aac8b080-569f-11eb-9926-b9b76a63dfae.jpeg)
 
-1. OOP(Object Oriented Programming)
+**1.OOP(Object Oriented Programming)**
 
 ![OOP_image2](https://user-images.githubusercontent.com/70124288/104596040-c4c1bd80-56b6-11eb-9717-af427862dd7d.jpeg)
 
 1) Object(객체)
 > 처음 객체라는 말을 들으면 그 의미를 이해하기 상당히 어렵다. Object라는 단어에 굉장히 많은 의미들이 있고 그 중에 왜 하필 객체라는 뜻을 골라서 사용하는지 잘 모르겠다. 객체라는 것을 이해하기 위해서 여러 고민을 하다 결국 '책장'과 같다는 생각을 하게 되었다.   '책장'에는 스스로 작성한 무수히 많은 '책(property)'을 담을 수 있고 그 '책'에는 같을 수도 있고 다를 수도 있는 다양한 '내용(value)'들이 담겨져 있다. '책'의 '내용'을 바꾸고 싶으면 '책장'에서 원하는 '책'을 꺼내서 '내용'을 추가하거나 삭제할 수 있다.
 또한, 객체는 종류가 같다고 하더라고 개별적이다. 마치 동명이인 처럼 이름은 같아도 서로 다른 존재인 것 처럼 말이다.
-
+   
 2) Class
 > 클래스는 객체들이 공통적으로 갖는 속성들의 모음이다.   처음 클래스에 관한 설명도 듣고 이해하기 위해서 구글링도 하면서 공부를 했는데 그냥 코드스테이츠에서 가장 많은 예시로 사용한 '차'를 가지고 이해하는게 쉬웠다.'차를 만드는 공장(class)'있고 이 '공장'에서는 '차(Object)'를 만들기 위해 '설계팀(constructor)'에서 설계한다. 그렇게 '설계팀'에서 '차'에 어떤 '부품(property)'을 사용하고 어떤 '기능(function)'을 넣을 것인지 결정을 내리면 '공장'에서는 쉽게 '차'들을 생성할 수 있다. 이때 만들어진 '차'들은 각각 개별적인 객체들이다.
-
+   
 3) OOP(객체 지향 프로그래밍)
 > OOP는 모든것이 객체로 이루어진 프로그램이다.   
 OOP와는 다르게 절차 지향 프로그래밍(Procedural Programming)도 있는데 이 프로그램은 함수 단위로 순서가 차례대로 진행된다. 대표적으로 C언어가 있다.   
 반면에, OOP는 객체들의 유기적인 관계를 가지고 프로그램이 진행된다. 즉, 작은 문제들을 해결하는 객체들을 먼저 만든 뒤, 이 객체들을 조합해서 큰 문제를 해결하는 상향식(Bottom-up) 방법이다.
 
-2. OOP의 4가지 concept
+**2.OOP의 4가지 concept**
 
 1)Encapsulation(캡슐화)
 > 변수와 함수들을 하나의 객체에 담는 것을 말한다.   
@@ -39,20 +39,18 @@ employee.getWage();
 ```
 (출저: codestates)   
 위의 예시와 같이 employee라는 객체에 함수와 속성(또는 변수)들을 담아두고 원하는 때에 바로바로 사용할 수 있게 만드는 것을 말한다.
-클래스를 만들고 인스턴스를 생성하여 클래스 안에 있는 속성과 함수에 접근하여 사용하는 것 또한 캡슐화에 속한다.
-   
+클래스를 만들고 인스턴스를 생성하여 클래스 안에 있는 속성과 함수에 접근하여 사용하는 것 또한 캡슐화에 속한다.   
 캡슐화를 하면 정보를 숨길 수 있다는 장점을 가지고 있다. 예를 들면, 우리가 자주 사용하는 스마트폰으로 전화를 걸려고 할 때 폰을 키고 바탕화면에 있는 전화앱에 들어가서 번호를 누르고 전화를 하면 된다. 이때 사용자는 전화를 걸기 위해서 폰의 내부 기능까지 세세히 알 필요가 없다. 즉, 외부적인 기능(public)만 알면 된다는 것이다.
-
+   
 2)Inheritance(상속)
 > 말그대로 부모 클래스의 특성과 기능을 자식 클래스가 그대로 물려받는 것을 말한다.   
 사람으로 비유하자면 부모가 있고 자식이 있으면 자식은 부모의 특징을 물려받는다. 생김새, 혈액형, 재산, ...등 부모가 가지고 있던 것을 물려받는 것을 의미한다.   
-만약 기능의 일부분을 변경해야 할 경우 자식 클래스에서 상속받은 그 기능만을 수정해서 다시 정의하게 되는데, 이러한 작업을 '오버라이딩(Overriding)'이라고 한다. 상속은 캡슐화를 유지하면서도 클래스의 재사용이 용이하도록 해 준다.
-   
+만약 기능의 일부분을 변경해야 할 경우 자식 클래스에서 상속받은 그 기능만을 수정해서 다시 정의하게 되는데, 이러한 작업을 '오버라이딩(Overriding)'이라고 한다. 상속은 캡슐화를 유지하면서도 클래스의 재사용이 용이하도록 해 준다.   
 상속이 필요한 이유로는 코드의 중복을 없애기 위함이다. 코드가 중복이 되면 메모리를 차지하는 데이터 양도 증가하고 프로그램의을 유지 보수하는 비용도 증가한다. 그렇기에 개발을 하는데 있어서 코드 중복은 반드시 피해야 할 문제이며 이 상속을 통해서 코드 중복의 문제를 어느 정도 해결할 수 있다.
-
+   
 3)Abstraction(추상화)
 > 추상화는 목적에 맞게 필요한 부분만을 보여주는 것이다. 위에 캡슐화에서 정보 은닉의 예시로 설명했던 스마트폰처럼 스마트폰을 사용할 때 그 순간순간의 목적에 맞게 스마트폰의 앱이 켜지면서 화면이 계속 바뀌지만 그외에는 실행되지 않는다. 즉, 복잡한 내부 사정을 다 알 필요가 없게 해주는 개념이다.
-
+   
 4)Polymorphism(다형성)
 > 다형성은 하나의 변수나 함수가 상황마다 다른 기능을 하는 것을 말한다.   
 위의 class 예시에서 '공장'이 '프렌차이즈점'을 냈다고 하면 '프렌차이즈점'도 '공장'과 마찬가지로 같은 기능을 가진 '차'를 생성할 수 있다(=== 상속). 하지만 '프렌차이즈점'에서 생성된 '차'는 그 상황에 맞게 성능과 특징을 다르게 만들 수 있다(=== 오버라이딩). 이러한 것을 다형성이라고 한다.   
