TIL_OOP_Instantiation_Patterns

--- a/_posts/2021-01-14-TIL-OOP.md
+++ b/_posts/2021-01-14-TIL-OOP.md
@@ -1,7 +1,7 @@
 ---
 title: "What is OOP?"
 date: 2021-01-14 08:03:17 -0400
-categories: JavaScript codestates Github
+categories: JavaScript codestates Github OOP
 ---
 
 ![OOP_image](https://user-images.githubusercontent.com/70124288/104579710-aac8b080-569f-11eb-9926-b9b76a63dfae.jpeg)
