--- a/_posts/2021-01-14-TIL-OOP.md
+++ b/_posts/2021-01-14-TIL-OOP.md
@@ -40,7 +40,8 @@ employee.getWage();
 (출저: codestates)   
 위의 예시와 같이 employee라는 객체에 함수와 속성(또는 변수)들을 담아두고 원하는 때에 바로바로 사용할 수 있게 만드는 것을 말한다.
 클래스를 만들고 인스턴스를 생성하여 클래스 안에 있는 속성과 함수에 접근하여 사용하는 것 또한 캡슐화에 속한다.   
-캡슐화를 하면 정보를 숨길 수 있다는 장점을 가지고 있다. 예를 들면, 우리가 자주 사용하는 스마트폰으로 전화를 걸려고 할 때 폰을 키고 바탕화면에 있는 전화앱에 들어가서 번호를 누르고 전화를 하면 된다. 이때 사용자는 전화를 걸기 위해서 폰의 내부 기능까지 세세히 알 필요가 없다. 즉, 외부적인 기능(public)만 알면 된다는 것이다.
+캡슐화를 하면 정보를 숨길 수 있다는 장점을 가지고 있다. 예를 들면, 우리가 자주 사용하는 스마트폰으로 전화를 걸려고 할 때 폰을 키고 바탕화면에 있는 전화앱에 들어가서 번호를 누르고 전화를 하면 된다. 이때 사용자는 전화를 걸기 위해서 폰의 내부 기능까지 세세히 알 필요가 없다. 즉, 외부적인 기능(public)만 알면 된다는 것이다.   
+정보 은닉을 하는 이유로는 그 정보가 매우 중요하고 외부에서 누군가가 그것을 임의로 수정해서 프로그램을 망치는 것을 방지하기 위해서 필요한데 이때 캡슐화를 통해서 정보 은닉이 가능해진다.
    
 2)Inheritance(상속)
 말그대로 부모 클래스의 특성과 기능을 자식 클래스가 그대로 물려받는 것을 말한다.   
